--- a/{{cookiecutter.app_name}}/Podfile
+++ b/{{cookiecutter.app_name}}/Podfile
@@ -11,7 +11,6 @@ target '{{cookiecutter.app_name}}' do
 
     pod 'Fabric'
     pod 'Crashlytics'
-
     pod 'Device', '~> 2.0'
     pod 'Kingfisher', '~> 3.0'
     pod 'SwiftDate', '~>4.1'
@@ -19,6 +18,7 @@ target '{{cookiecutter.app_name}}' do
     pod 'RxAlamofire', '~>3.0'
     pod 'RSTUtils', '~>1.0'
     pod 'SwiftyJSON', '~>3.0'
+    pod 'SwiftLint', '=>0.22.0'
 
     target '{{cookiecutter.app_name}}Tests' do
         inherit! :search_paths
